syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message RebaseOverlayDiskRequest {
    types.Disk OverlayDisk = 1;
    string BaseDiskId = 4;
    string TargetBaseDiskId = 2;
    uint64 SlotGeneration = 3;
}

message RebaseOverlayDiskTaskState {}
