syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message RetireBaseDiskRequest {
    string BaseDiskId = 1;
    types.Disk SrcDisk = 2;
    string SrcDiskCheckpointId = 3;
}

message RetireBaseDiskTaskState {
    reserved 2 to 3;
}
